# tmpfs-switch-root

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
config_example/: exclude_paths.txt  include_packages.txt
src/: CMakeLists.txt  build_ramdisk.cpp  gather_file_info.cpp  tmpfs_switch_init.c  tmpfs_switch_init.h  tmpfs_switch_proc.c  tmpfs_switch_tty.c  trie.cpp  trie.h  work_file.h
